--- a/src/ui/InfoWindow.ui
+++ b/src/ui/InfoWindow.ui
@@ -61,7 +61,7 @@
         <string>Cartridge</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="16" column="0">
+        <item row="17" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Game Code</string>
@@ -82,7 +82,7 @@
           </property>
          </widget>
         </item>
-        <item row="11" column="1">
+        <item row="12" column="1">
          <widget class="QLabel" name="labelRomVersion">
           <property name="text">
            <string>TextLabel</string>
@@ -103,7 +103,7 @@
           </property>
          </widget>
         </item>
-        <item row="11" column="0">
+        <item row="12" column="0">
          <widget class="QLabel" name="label_13">
           <property name="text">
            <string>ROM Version</string>
@@ -117,42 +117,49 @@
           </property>
          </widget>
         </item>
-        <item row="15" column="1">
+        <item row="16" column="1">
          <widget class="QLabel" name="labelMakerCode">
           <property name="text">
            <string>TextLabel</string>
           </property>
          </widget>
         </item>
-        <item row="15" column="0">
+        <item row="16" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Maker Code</string>
           </property>
          </widget>
         </item>
-        <item row="10" column="0">
+        <item row="8" column="1">
+         <widget class="QLabel" name="labelExpansionFlashSize">
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="0">
          <widget class="QLabel" name="label_12">
           <property name="text">
            <string>Dev Id</string>
           </property>
          </widget>
         </item>
-        <item row="12" column="1">
+        <item row="13" column="1">
          <widget class="QLabel" name="labelSpecialVersion">
           <property name="text">
            <string>TextLabel</string>
           </property>
          </widget>
         </item>
-        <item row="14" column="0">
+        <item row="15" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Checksum 2</string>
           </property>
          </widget>
         </item>
-        <item row="13" column="1">
+        <item row="14" column="1">
          <widget class="QLabel" name="labelChecksum1">
           <property name="text">
            <string>TextLabel</string>
@@ -173,7 +180,7 @@
           </property>
          </widget>
         </item>
-        <item row="13" column="0">
+        <item row="14" column="0">
          <widget class="QLabel" name="label_20">
           <property name="text">
            <string>Checksum 1</string>
@@ -187,14 +194,21 @@
           </property>
          </widget>
         </item>
-        <item row="14" column="1">
+        <item row="15" column="1">
          <widget class="QLabel" name="labelChecksum2">
           <property name="text">
            <string>TextLabel</string>
           </property>
          </widget>
         </item>
-        <item row="12" column="0">
+        <item row="8" column="0">
+         <widget class="QLabel" name="label_17">
+          <property name="text">
+           <string>Expansion Flash Size</string>
+          </property>
+         </widget>
+        </item>
+        <item row="13" column="0">
          <widget class="QLabel" name="label_15">
           <property name="text">
            <string>Special Version</string>
@@ -236,7 +250,7 @@
           </property>
          </widget>
         </item>
-        <item row="9" column="1">
+        <item row="10" column="1">
          <widget class="QLabel" name="labelCountry">
           <property name="text">
            <string>TextLabel</string>
@@ -250,14 +264,14 @@
           </property>
          </widget>
         </item>
-        <item row="9" column="0">
+        <item row="10" column="0">
          <widget class="QLabel" name="label_11">
           <property name="text">
            <string>Country</string>
           </property>
          </widget>
         </item>
-        <item row="16" column="1">
+        <item row="17" column="1">
          <widget class="QLabel" name="labelGameCode">
           <property name="text">
            <string>TextLabel</string>
@@ -271,7 +285,7 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="1">
+        <item row="11" column="1">
          <widget class="QLabel" name="labelDevId">
           <property name="text">
            <string>TextLabel</string>
@@ -285,15 +299,15 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="0">
-         <widget class="QLabel" name="label_17">
+        <item row="9" column="0">
+         <widget class="QLabel" name="label">
           <property name="text">
-           <string>Expansion Flash Size</string>
+           <string>Interleaved</string>
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
-         <widget class="QLabel" name="labelExpansionFlashSize">
+        <item row="9" column="1">
+         <widget class="QLabel" name="labelInterleaved">
           <property name="text">
            <string>TextLabel</string>
           </property>
