--- a/src/ui/LogWindow.ui
+++ b/src/ui/LogWindow.ui
@@ -83,6 +83,13 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="4">
+       <widget class="QCheckBox" name="chkTimer">
+        <property name="text">
+         <string>Timer</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
